# myspinbot

./: .dockerignore  .env.example  .gitignore  GEMINI.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  myspinbot.code-workspace
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  GEMINI.md  debug.js  docker-entrypoint.sh  package-lock.json  package.json  vitest.config.ts
backend/.devcontainer/: devcontainer.json
backend/config/: capabilities.json  config.json  pipelines.json
backend/secrets/: README.SECRETS.md
backend/src/: config.js  index.js
backend/tests/: capabilities.test.js  globalConfig.js  health.test.js  infinitetalk.test.js  metrics.test.js  planner.test.js  queue.test.js  setup.js  setupQueue.js  status.test.js  train.test.js  ws.test.js
codegen/: Dockerfile  gen-all.sh  gen-backend-validators.sh  gen-worker-datamodel.sh
common/config/: redis.bridge.json
common/shared/: CONTEXT_BOOTSTRAP.md
docs/: 01_project_description.md  02_architecture_overview.md  03_tech_stack.md  04_modular_breakdown.md  05_roadmap.md  06_history.md  README.md
docs/phase0/: grafana_guide.md  phase0_overview.md  prometheus_guide.md  provision_scripts.md  runtime_dirs.md  traefik_guide.md
docs/phase1/: backend_frontend.md  compose_layout.md  container_infrastructure.md  debugging_backend.md  debugging_frontend.md  development_workflow.md  implementation_details.md  jobs_and_ws.md  phase1_overview.md  testing_and_workspace.md  ui_and_basic_workflow.md  workflow_guide.md
docs/phase2/: development_workflow_revisited.md  dual_orchestration.md  phase2_overview.md  shared_schemas.md
docs/phase3/: ai_pipelines.md  infinite_talk.md  phase3_overview.md  wan_flow.md
frontend/: .dockerignore  Dockerfile  GEMINI.md  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/.gemini/: settings.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ProgressBar.tsx  StatusCard.tsx  UploadForm.tsx
frontend/lib/: api.ts  enums.ts  useWebSocket.ts  ws.ts
frontend/tests/: ProgressBar.test.tsx  StatusCard.test.tsx  UploadForm.test.tsx
grafana/dashboards/: backend.json  cadvisor.json  (+6 more)
prometheus/: prometheus.yml
sandbox/: Dockerfile
scripts/: provision_secrets.ps1  provision_secrets.sh
traefik/: traefik.yml  traefik_dynamic.yml
worker/: .dockerignore  Dockerfile  GEMINI.md  docker-entrypoint.sh  pyproject.toml
worker/.devcontainer/: devcontainer.json
worker/config/: capabilities.json  config.json
worker/src/worker/: __init__.py  bridge.py  config.py  main.py  registry.py  schemas.py  tasks.py  utils.py
worker/src/worker/api/: router.py
worker/src/worker/api/endpoints/: metrics.py
worker/src/worker/core/: bridge.py  executor.py
worker/src/worker/infra/metrics/: __init__.py  _registry.py
worker/src/worker/models/capabilities/: __init__.py  capability_schema.py  combined_manifest_schema.py  defs_schema.py  plane_manifest_schema.py
worker/src/worker/models/jobs/: __init__.py  job_messaging_schema.py
worker/src/worker/models/langgraph/: __init__.py  graph_schema.py
worker/src/worker/models/redis/: __init__.py  redis_config_schema.py
worker/src/worker/models/storage/: __init__.py  artifact_schema.py
worker/src/worker/models/worker/: __init__.py  config_schema.py  workflows_schema.py
worker/src/worker/services/: media.py  storage.py  tasks.py
worker/src/worker/utils/: misc.py
worker/src/worker/workflows/: __init__.py  infinitetalk.py  tts.py  upscaler.py
(+109 files in other folders)
