[project]
name = "myspinbot-worker"
version = "0.2.0"
description = "GPU-enabled AI worker for MySpinBot"
authors = [{ name = "Konstantinos Tzevanidis" }]
requires-python = ">=3.12.3"
scripts = { "myspinbot-worker" = "worker.main:run" }
dependencies = [
    # Core runtime
    "redis>=6.4",
    # Web / metrics serving
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    # Configuration / env
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = ["debugpy>=1.8.17", "pytest>=9.0.1", "pytest-cov>=7.0.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dramatiq]
broker = "redis://redis:6379"

[tool.setuptools.packages.find]
where = ["src"]
