[project]
name = "myspinbot-worker"
version = "0.2.0"
description = "GPU-enabled AI worker for MySpinBot"
authors = [{ name = "Konstantinos Tzevanidis" }]
requires-python = ">=3.12.3"
scripts = { "myspinbot-worker" = "worker.main:run" }
dependencies = [
    # Core runtime
    "redis>=6.4",
    # Web / metrics serving
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    # Configuration / env
    "python-dotenv>=1.2.1",
    # Comfyui Dependencies
    "aiohttp-socks==0.11.0",
    "alembic==1.18.1",
    "av==16.1.0",
    "black==25.12.0",
    "chardet==5.2.0",
    "comfyui-embedded-docs==0.4.0",
    "comfyui-frontend-package==1.38.4",
    "comfyui-workflow-templates==0.8.11",
    "comfyui-workflow-templates-core==0.3.97",
    "comfyui-workflow-templates-media-api==0.3.41",
    "comfyui-workflow-templates-media-image==0.3.63",
    "comfyui-workflow-templates-media-other==0.3.84",
    "comfyui-workflow-templates-media-video==0.3.38",
    "cryptography==46.0.3",
    "future==1.0.0",
    "greenlet==3.3.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "kornia==0.8.2",
    "kornia-rs==0.1.10",
    "lark==1.3.1",
    "matrix-nio==0.25.2",
    "mypy-extensions==1.1.0",
    "pathspec==1.0.3",
    "pydantic-settings==2.12.0",
    "pygithub==2.8.1",
    "pyjwt==2.10.1",
    "pynacl==1.6.2",
    "python-socks==2.8.0",
    "pytokens==0.3.0",
    "requirements-parser==0.13.0",
    "sentencepiece==0.2.1",
    "spandrel==0.4.1",
    "sqlalchemy==2.0.45",
    "torchsde==0.2.6",
    "trampoline==0.1.2",
    "typing-inspection==0.4.2",
    "unpaddedbase64==2.1.0",
    "uv==0.9.26",
]

[project.optional-dependencies]
dev = ["debugpy>=1.8.17", "pytest>=9.0.1", "pytest-cov>=7.0.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dramatiq]
broker = "redis://redis:6379"

[tool.setuptools.packages.find]
where = ["src"]
